<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_my_complaints"
            android:icon="@drawable/road"
            android:title="@string/menu_my_complaints" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/support"
            android:title="@string/menu_help" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/about"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_privacy"
            android:icon="@drawable/privacy"
            android:title="@string/menu_privacy" />
    </group>

    <item android:title="@string/menu_account_actions">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/logout"
                android:title="@string/menu_logout" />
        </menu>
    </item>
</menu>